<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/wellcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wellcom"
            android:layout_marginTop="-10dp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/wellcome_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/wellcom_desc"
            android:textColor="#9F9F9F"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/email_login"
            android:layout_width="360dp"
            android:backgroundTint="@color/purple_100"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:hint="@string/username1"
            android:importantForAutofill="no" />




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            tools:ignore="MissingConstraints"
            app:passwordToggleEnabled="true"
            android:background="@color/white"
            >

            <EditText
                android:id="@+id/passord_login"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:hint="@string/password1"
                android:importantForAutofill="no"
                android:inputType="numberPassword"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_login"
            android:layout_width="360dp"
            android:layout_marginTop="70dp"
            android:background="@color/purple_500"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/link_in_textview">

        </TextView>

    </LinearLayout>
</FrameLayout>