<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/add_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/add_info"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textSize="35sp" />

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                tools:ignore="UselessLeaf">

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:text="@string/gender"
                    tools:ignore="SpUsage" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_male"
                        android:layout_marginEnd="50dp"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_female" />

                </RadioGroup>


            </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/wight"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:text="@string/wight"
                tools:ignore="SpUsage" />

            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                tools:ignore="UselessLeaf">

                <Button
                    android:id="@+id/increase_wight"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:background="@color/purple_100"
                    android:gravity="center"
                    android:text="-"
                    android:textColor="@color/white" />

            <EditText
                android:id="@+id/wight_input"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/input"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck">

            </EditText>


            <Button
                android:id="@+id/decrease_wight"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@drawable/input"
                android:text="+" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/hight"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:text="@string/hight"
                tools:ignore="SpUsage" />
            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                tools:ignore="UselessLeaf">

            <Button
                android:id="@+id/increase_hight"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@drawable/input"
                android:text="-"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/hight_input"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/input"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck">

            </EditText>

            <Button
                android:id="@+id/decrease_hight"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@drawable/input"
                android:text="+" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            tools:ignore="UselessLeaf">

            <TextView
                android:id="@+id/date"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:text="@string/date"
                tools:ignore="SpUsage" />


            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints="date"
                android:ems="10"
                android:paddingLeft="11dp"
                android:hint="your date"
                android:background="@drawable/input"
                android:inputType="date"
                tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />


        </LinearLayout>
        <Button
            android:id="@+id/add_info_button"
            android:layout_width="360dp"
            android:layout_marginTop="60dp"
            android:background="@color/purple_500"
            android:layout_height="wrap_content"
            android:text="@string/add_info_button" />



    </LinearLayout>



</FrameLayout>